Tweaked some code per ESLint best practices

--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "known-spam-emails",
-  "version": "0.0.0",
   "description": "List of known email addressed used by bots/spammers to check against when creating registering accounts in an app.",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/adityabansod/known-spam-emails.git"
+  "version": "0.0.0",
+  "author": "Aditya Bansod",
+  "devDependencies": {
+    "eslint": "0.11.0"
   },
   "homepage": "https://github.com/adityabansod/known-spam-emails",
-  "scripts": {
-    "test": "node test.js"
-  },
   "keywords": [
     "email",
     "spam",
     "prevent",
     "list"
   ],
-  "author": "Aditya Bansod",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/adityabansod/known-spam-emails.git"
+  },
+  "scripts": {
+    "test": "node test.js"
+  }
 }
